--- a/src/css/landingcovers.css
+++ b/src/css/landingcovers.css
@@ -52,6 +52,6 @@
 }
 @media (max-width: 750px){
     .landingcovertwomain {
-        height: 110vh;
+        height: 120vh;
     }
 }
